<resources>

    <string name="app_name">局长移动工作站新</string>
    <string name="phone_number">账号</string>
    <string name="account_not_null">账号格式不正确</string>
    <string name="register_phonenumber">手机号码</string>
    <string name="number_hit">输入手机号码</string>
    <string name="password">密码</string>
    <string name="psssword_not_null">密码格式不正确</string>
    <string name="register_password">登陆密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="show_password">显示密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="new_user_register">新用户注册？</string>
    <string name="cancel">取消</string>
    <string name="query">查询</string>
    <string name="check_fail">查询失败</string>
    <string name="org_name">单位名称</string>
    <string name="name">名称</string>
    <string name="chanage_org">单位选择</string>
    <string name="unit_org_filter">单位过虑查询</string>
    <string name="un_org">未匹配到相关的单位</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">截止时间</string>
    <string name="mz_charge">门诊收入：</string>
    <string name="zy_charge">住院收入：</string>
    <string name="total_charge_zl">诊疗收入：</string>
    <string name="rycs">入院人数</string>
    <string name="cyrs">出院人数</string>
    <string name="total_charge_yp">药品收入：</string>
    <string name="yp_rate">药品比例：</string>
    <string name="base_charge">基药收入：</string>
    <string name="base_rate">基药比例：</string>
    <string name="mzrc">门诊人次</string>
    <string name="zyrc">住院人数</string>
    <string name="drugname">药品名称</string>
    <string name="specification">规格</string>
    <string name="amount">数量</string>
    <string name="diagname">诊断名称</string>
    <string name="amount1">就诊人次</string>
    <string name="down_app">下载新的版本应用？</string>
    <string name="down_title">下载进度</string>
    <string name="ok">确定</string>
    <string name="percent">12%</string>
    <string name="total_charge">总\u0020\u0020收\u0020\u0020入：</string>
    <string name="Is_landing">正在登录...</string>
    <string name="request_fail">请求失败，请稍后再试</string>
    <string name="org_is_not_null">请选择机构</string>
    <string name="register_success">注册成功</string>
    <string name="register_faile">注册失败</string>
    <string name="choose_date">选择日期</string>
    <string name="archive_statistics">档案统计</string>
    <string name="health_check">卫生考核</string>
    <string name="business_journal">业务日报</string>
    <string name="business_statistics">业务统计</string>
    <string name="drug_rank">用药排名</string>
    <string name="disease_rank">疾病排名</string>
    <string name="start_time_not_more_endtime">开始时间不能大于结束时间</string>
    <string name="not_more_current_time">不能大于当前时间</string>
    <string name="income_info">收入详情</string>
    <string name="medical_info">就医详情</string>
    <string name="drug_nfo">用药排行</string>
    <string name="service_erroe">服务器错误</string>
    <string name="click_two_exit">再按一次退出程序</string>
    <string name="is_loading_please_wait">正在加载，请稍后...</string>
    <string name="hint">提示</string>
    <string name="home_page">主页</string>
    <string name="back">返回</string>
    <string name="not_data">暂无数据</string>
    <string name="mzfy">门诊费用</string>
    <string name="zyfy">住院费用</string>
    <string name="jy">基药</string>
    <string name="mzrjfy">门诊人均费用</string>
    <string name="zyrjfy">住院人均费用</string>
    <string name="disease_statistice">疾病详情</string>
    <array name="disease">
        <item>区域疾病统计</item>
        <item>机构机构排名</item>
    </array>
    <string name="unit">单位</string>
    <string name="drug_top20">用药排名前20</string>
    <string name="total_population">总人口情况</string>
    <string name="resident_population">普查常驻人口数</string>
    <string name="archives_amount">建档数</string>
    <string name="archives_rates">建档率</string>
    <string name="network_error">网络错误，请检查网络设置</string>
    <string name="server_error">服务器错误</string>
</resources>