<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/tv_shot"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/x35"
        android:text="@string/drugname"/>


    <TextView
        android:id="@+id/tv_item_format"
        style="@style/tv_small"
        android:layout_height="match_parent"
        android:text="@string/specification"/>


    <TextView
        android:id="@+id/tv_item_unit"
        style="@style/tv_small"
        android:layout_height="match_parent"
        android:text="@string/unit"/>


    <TextView
        android:id="@+id/tv_item_num"
        style="@style/tv_shot"
        android:layout_height="match_parent"
        android:text="@string/amount"/>
</LinearLayout>