<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/drugname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/x10"
        android:text="@string/drugname"
        android:textColor="@color/ivory_black"
        android:textSize="@dimen/x15"/>

    <TextView
        android:id="@+id/specification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/x10"
        android:text="@string/specification"
        android:textColor="@color/ivory_black"
        android:textSize="@dimen/x15"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/x10"
        android:text="@string/amount"
        android:textColor="@color/ivory_black"
        android:textSize="@dimen/x15"/>

</LinearLayout>