<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/aliceblue"
        android:elevation="50dp"
        card_view:cardCornerRadius="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y40"
                android:background="@color/holo_blue_bright"
                android:gravity="center"
                android:padding="@dimen/x7"
                android:text="@string/total_population"
                android:textColor="@color/white"
                android:textSize="@dimen/x15"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white_eaeceb"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y40"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_name1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/resident_population"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>

                    <TextView
                        android:id="@+id/item_name2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/archives_amount"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>

                    <TextView
                        android:id="@+id/item_name3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/archives_rates"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_eaeceb"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y40"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_result1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/resident_population"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>

                    <TextView
                        android:id="@+id/item_result2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/archives_amount"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>

                    <TextView
                        android:id="@+id/item_result3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/archives_rates"
                        android:textColor="@color/ivory_black"
                        android:textSize="@dimen/x13"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>